--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,13 +1,7 @@
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
-}
+
 
 .hero-container {
-  background: url('../images/img-home.jpg') center center/cover no-repeat;
+  background: url('../images/img-7.jpg') center center/cover no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -36,13 +30,16 @@ video {
   margin-top: 32px;
 }
 
+.hero-btns a {
+  color: rgb(120,76,100);
+  cursor: pointer;
+  text-decoration: none;
+}
+
 .hero-btns .btn {
   margin: 6px;
 }
 
-.fa-play-circle {
-  margin-left: 4px;
-}
 
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
