--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -121,9 +121,11 @@
 
   .navbar-logo {
     position: absolute;
+    margin-left: 10px;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
+    font-size: 1.5rem;
   }
 
   .menu-icon {
