--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,6 @@
 :root {
   --primary: #fff;
+  --secondary: #dc9aaf;
 }
 
 .btn {
@@ -18,7 +19,7 @@
 
 .btn--outline {
   background-color: transparent;
-  color: #fff;
+  color: var(--primary);
   padding: 8px 20px;
   border: 1px solid var(--primary);
   transition: all 0.3s ease-out;
@@ -27,6 +28,7 @@
 .btn--medium {
   padding: 8px 20px;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .btn--large {
@@ -37,8 +39,8 @@
 .btn--large:hover,
 .btn--medium:hover {
   transition: all 0.3s ease-out;
-  background: #fff;
-  color: rgb(214 152 186);
+  background: var(--primary);
+  color: var(--secondary);
   transition: 250ms;
   opacity: 0.9;
 }
