--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: #242424;
-  padding: 4rem 0 2rem 0;
+  padding: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,12 +8,13 @@
 }
 
 .fab:hover {
-  color: rgb(214 152 186);
-  transform: scale(1.1)
+  color: var(--secondary);
+  transition: 0.7s;
+  transform: scale(1.2) rotateY(360deg);
 }
 /* Social Icons */
 .social-icon-link {
-  color: #fff;
+  color: var(--primary);
   font-size: 24px;
 }
 
@@ -39,7 +40,7 @@
 }
 
 .social-logo {
-  color: #fff;
+  color: var(--primary);
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
