--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -13,7 +13,12 @@
   color: var(--secondary);
 }
 .contact-wrapper {
-  max-width: 1000px;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-wrapper input, textarea {
@@ -28,4 +33,15 @@
 
 .contact-field {
   max-width: 500px
+}
+
+#submit-btn {
+  width: 200px;
+  padding: 10px;
+}
+
+#submit-btn input:hover {
+  color: var(--secondary);
+  transition: 0.1s;
+  transform: scale(1.03);
 }
