--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -42,6 +42,7 @@
 
 #submit-btn input:hover {
   color: var(--secondary);
-  transition: 0.1s;
-  transform: scale(1.03);
+  transition: 0.2s;
+  transform: scale(1.05);
+  cursor: pointer;
 }
