added content and skills and tools placeholder to about section, also css improved a bit

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -36,3 +36,9 @@
     flex-direction: column;
   }
 }
+
+.skills-photo {
+    background: url(../images/skills.jpg) center center/contain no-repeat;
+    height: 80px;
+    width: 100%;
+}
