--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -40,6 +40,14 @@
   margin: 6px;
 }
 
+.fa-arrow-alt-circle-down {
+  margin-left: 0.7rem;
+}
+
+.btn:hover > .fa-arrow-alt-circle-down {
+  transform: translateY(10%);
+}
+
 
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
