--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,19 +1,22 @@
-#about {
-  background: var(--primary);
-}
+
 #about h1 {
   margin: 20px 30px;
 }
 
 .about-container {
+  background: url('../images/dots.svg') center center/cover no-repeat;
+  box-shadow: inset 0 0 0 1000px rgba(12, 222, 222, 0.25);
   display: flex;
   flex-flow: column;
   align-items: center;
-  max-width: 1120px;
-  width: 90%;
+  max-width: 4444px;
+  width: 100%;
+  height: auto;
   margin: 0 auto;
   font-family: 'PT Sans', sans-serif;
 }
+
+
 
 .about-content {
   display: flex;
@@ -100,8 +103,3 @@ i[title]:hover::after {
   }
 }
 
-.skills-photo {
-    background: url(../images/skills.jpg) center center/contain no-repeat;
-    height: 80px;
-    width: 100%;
-}
