--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,14 +1,14 @@
 
 
 .hero-container {
-  background: url('../images/img-7.jpg') center center/cover no-repeat;
+  background: url('../images/dots.svg') center center/cover no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 0 1000px rgba(12, 222, 222, 0.25);
   object-fit: contain;
 }
 
