--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -65,7 +65,7 @@
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid rgb(214 152 186);
+  border-bottom: 4px solid var(--secondary);
   transition: all 0.2s ease-out;
 }
 
