--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,7 +7,7 @@
 
 .about-container {
   background: url('../images/dots.svg') center center/cover no-repeat;
-  box-shadow: inset 0 0 0 1700px rgba(59, 156, 156, 0.5);
+  box-shadow: inset 0 0 0 1700px rgb(40 136 146 / 50%);
   display: flex;
   flex-flow: column;
   align-items: center;
