--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -149,6 +149,7 @@
   }
 
   .nav-links-mobile {
+    text-shadow: none;
     display: block;
     text-align: center;
     margin: 2rem auto;
@@ -167,5 +168,6 @@
     background: #fff;
     color: #242424;
     transition: 250ms;
+    text-shadow: none;
   }
 }
