added word and letter spacing to navbar herosection and about, improved margin and padding on about section

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -10,6 +10,7 @@
   align-items: center;
   box-shadow: inset 0 0 0 1700px rgb(40 136 146 / 50%);
   object-fit: contain;
+  word-spacing: 0.2rem;
 }
 
 .hero-container > h1 {
