--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,6 @@
 
 #about h1 {
-  margin: 20px 30px;
+  margin: 40px 30px;
   color: var(--primary);
   text-shadow: 2px 2px #15131496;
 }
@@ -16,6 +16,8 @@
   height: auto;
   margin: 0 auto;
   font-family: 'PT Sans', sans-serif;
+  word-spacing: 0.2rem;
+  letter-spacing: 0.05rem;
 }
 
 
@@ -30,6 +32,10 @@
 .about-info h3 {
     border-bottom: 3px ridge var(--secondary);
     line-height: 2rem;
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
+    margin-inline-start: 0px !important;
+    margin-inline-end: 0px !important;
 }
 
 .about-info ul:last-child {
@@ -39,7 +45,7 @@
 
 
 .about-info {
-  margin-left: 50px;
+  margin: 2% 6%;
 }
 
 .about-info p, li {
@@ -55,21 +61,24 @@
   list-style: none;
 }
 
-.photo {
-    background: url(../images/alex.jpg) center center/cover;
-    height: 32vh;
-    min-width: 200px;
-    max-width: 350px;
-    border-radius: 10px;
-    padding: 15px;
-    margin: 15px;
-}
-
 .skills-icons {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+.about-skills {
+  margin: 20px 20px;
+}
+
+.skills-icons {
+  background: linear-gradient(180deg,
+  rgb(40 136 146 / 20%), transparent);
+  border-radius: 10%;
+  padding-top: 15px;
+  padding: 10px;
+}
+
 .about-skills h1 {
   margin-bottom: 3rem;
   color: var(--secondary);
@@ -80,9 +89,8 @@
 }
 .about-skills .colored {
   font-size: 3rem;
-  margin-left: 1rem;
-  margin-top: 1rem;
-  padding: 5px;
+  margin: 1rem 1rem;
+  padding: 0.2rem;
   opacity: 0.8;
 }
 
@@ -94,9 +102,10 @@
 i[title]:hover::after {
   content: attr(title);
   position: absolute;
-  top: -30%;
-  left: 10%;
+  top: -40%;
+  left: 15%;
   font-size: 1rem;
+  opacity: 1;
 
 }
 
