--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,7 +7,7 @@
 
 .about-container {
   background: url('../images/dots.svg') center center/cover no-repeat;
-  box-shadow: inset 0 0 0 1700px rgb(40 136 146 / 50%);
+  box-shadow: inset 0 0 0 1700px rgb(27 94 101 / 42%);
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -68,12 +68,12 @@
 }
 
 .about-skills {
-  margin: 20px 20px;
+  margin: 2% 6%;
 }
 
 .skills-icons {
   background: linear-gradient(180deg,
-  rgb(40 136 146 / 20%), transparent);
+  rgb(27 94 101 / 14%), transparent);
   border-radius: 10%;
   padding-top: 15px;
   padding: 10px;
