added react bootstrap and node-sass for badges on project cards

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -94,7 +94,7 @@
 .cards__item__info {
   padding: 20px 30px 30px;
   min-height: 98px;
-  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
