--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 40px;
+  min-height: 365px;
 }
 
 .contact-container h1 {
@@ -13,6 +14,7 @@
   justify-content: center;
   color: var(--secondary);
   text-shadow: 2px 2px #25434a;
+  margin-bottom: 15px;
 }
 .contact-wrapper {
   max-width: 700px;
