--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,7 +24,7 @@
 .navbar-logo {
   color: var(--primary);
   justify-self: start;
-  margin-left: 20px;
+  margin: 8px 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
