reworked contact form and footer to be responsive even at very low resolutions

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -60,4 +60,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .footer-container {
+    max-width: 100vw;
+  }
+  .social-icons {
+    max-width: 90vw;
+  }
 }
