--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -33,10 +33,7 @@
   max-width: 600px;
   padding: 10px;
   min-width: 375px;
-}
-
-.contact-field {
-  max-width: 500px
+  max-width: 100vw;
 }
 
 #submit-btn {
@@ -75,4 +72,16 @@
   transition: all 0.5s ease-in-out;
   color: black;
   text-shadow: none;
+}
+
+@media only screen and (max-width: 400px) {
+  .contact-field {
+    min-width: 100vw;
+  }
+  .contact-input {
+    max-width: 90vw;
+  }
+  .contact-container {
+    max-width: 100vw;
+  }
 }
