--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,23 +1,31 @@
 
 
 .hero-container {
-  background: url('../images/dots.svg') center center/cover no-repeat;
+  /*background: url('../images/alex-sketcher.jpeg') center center/cover no-repeat;*/
+  background-image:
+    linear-gradient(to bottom, rgb(122 154 151 / 52%), rgb(131 134 134 / 50%)),
+    url('../images/alex-sketcher.jpeg');
+  background-size: contain, cover;
+  background-position: center;
+  background-repeat: no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   box-shadow: inset 0 0 0 1700px rgb(27 94 101 / 42%);
   object-fit: contain;
   word-spacing: 0.2rem;
 }
 
+
 .hero-container > h1 {
   color: #fff;
   font-size: 65px;
-  margin-top: -100px;
+  margin-top: 30vh;
   text-shadow: 2px 2px #15131496;
+  margin-left: 7%;
+
 }
 
 .hero-container > p {
@@ -27,15 +35,17 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
   text-shadow: 2px 2px #15131496;
+  margin-left: 11%;
 }
 
 .hero-btns {
   margin-top: 32px;
+  margin-left: 12%;
 }
 
 .hero-btns a {
-  color: rgb(14 22 23);
-  text-shadow: 1px 1px #c8ecec;
+  color: var(--primary);
+  text-shadow: 1px 1px #0a282b;
   cursor: pointer;
   text-decoration: none;
 }
@@ -49,9 +59,9 @@
 }
 
 .btn:hover > .fa-arrow-alt-circle-down {
-  transform: translateY(10%);
-  transition: all 0.4s ease-in-out;
-  opacity: 0.8;
+  transform: rotateZ(180deg) rotateX(180deg);
+  transition: all 0.4s ease-in;
+  text-shadow: none;
 }
 
 
@@ -65,7 +75,7 @@
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
     font-size: 50px;
-    margin-top: -100px;
+    margin-top: 40vh;
   }
 
   .hero-container > p {
