added modal and carousel for project1 - not styled

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,6 @@
 @import "~bootstrap/scss/_progress";
 @import "~bootstrap/scss/_utilities";
 @import "~bootstrap/scss/_badge";
+@import "~bootstrap/scss/_modal";
+@import "~bootstrap/scss/_buttons";
+@import "~bootstrap/scss/_carousel";
