--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -3,16 +3,21 @@
 }
 
 .carousel-inner {
-  height: 70vh;
+  height: 53vh;
 }
 
 
 .carousel-item img{
-  width: 16rem;
-  height: 71vh;
-  object-fit: cover;
+  width: 100%;
+  height: 50vh;
+  object-fit: contain;
 }
 
 .carousel-indicators li {
   background-color: #0a3535e6;
+}
+
+
+.carousel-inner .active {
+  border-bottom: none !important;
 }
