--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -37,6 +37,8 @@
 
 .projects__items {
   margin-bottom: 24px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .projects__item {
@@ -170,7 +172,7 @@
     max-width: 85vw;
   }
   .projects__item__link {
-    min-width: 85vw;
+    min-width: 45vw;
   }
   .projects__skills {
     display: block;
