--- a/src/components/About.css
+++ b/src/components/About.css
@@ -20,13 +20,13 @@
   letter-spacing: 0.05rem;
 }
 
-
-
 .about-content {
   display: flex;
   align-items: center;
   align-content: center;
   line-height: 1.5rem;
+  color: #fff;
+  text-shadow: 1px 1px #15131496
 }
 
 .about-info h3 {
@@ -92,9 +92,9 @@
   text-shadow: 2px 2px #15131496;
 }
 .about-skills .colored {
-  font-size: 3rem;
-  margin: 1rem 1rem;
-  padding: 0.2rem;
+  font-size: 2.5rem;
+  margin: 0.5rem 0.5rem;
+  padding: 0.1rem;
   opacity: 0.8;
 }
 
