--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  max-width: 4444px;
   width: 100%;
   height: auto;
   margin: 0 auto;
@@ -37,7 +36,7 @@
 
 .projects__items {
   margin-bottom: 24px;
-  display: flex;
+  display: block;
   flex-wrap: wrap;
 }
 
@@ -176,5 +175,8 @@
   }
   .projects__skills {
     display: block;
+  }
+  .projects__container {
+    width: 80%;
   }
 }
