--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -58,8 +58,8 @@
 }
 
 .btn:hover > .fa-arrow-alt-circle-down {
-  transform: translateY(15%);
-  transition: all 0.4s ease-in;
+  transform: translateY(10%);
+  transition: all 0.1s ease-in-out;
   text-shadow: none;
 }
 
