--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -22,13 +22,14 @@
   justify-content: center;
   flex-direction: column;
   margin: 0 auto;
-  margin-top: 55%;
+  margin-top: 40%;
 }
 
 .hero-content > h1 {
   color: #fff;
   font-size: 3.5rem;
   text-shadow: 2px 2px #15131496;
+  letter-spacing: 0.2rem;
 }
 
 .hero-content > p {
@@ -37,6 +38,7 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
   text-shadow: 2px 2px #15131496;
+  letter-spacing: 0.1rem;
 }
 
 .hero-btns {
@@ -48,6 +50,7 @@
   text-shadow: 1px 1px #0a282b;
   cursor: pointer;
   text-decoration: none;
+  letter-spacing: 0.1rem;
 }
 
 .hero-btns .btn {
@@ -65,12 +68,6 @@
 }
 
 
-@media screen and (max-width 768px) {
-    .hero-content {
-    margin-top: 40% !important;
-  }
-}
-
 
 @media screen and (min-width: 1150px) {
   .hero-content {
@@ -83,15 +80,27 @@
   }
 }
 
-
-
 @media screen and (max-width: 768px) {
+  .hero-content {
+    margin-top: 55%;
+  }
   .hero-content > p {
     font-size: 1.8rem;
   }
-
   .btn-mobile {
     display: block;
     text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .hero-content h1 {
+    font-size: 2.2rem;
+  }
+  .hero-content p {
+    font-size: 1.3rem;
+  }
+  .hero-content a {
+    font-size: 0.9rem;
   }
 }
