--- a/src/components/About.css
+++ b/src/components/About.css
@@ -95,19 +95,22 @@
   opacity: 0.8;
 }
 
-.about-skills .colored:hover {
+.about-skills .colored:hover,
+.about-skills .colored:focus {
   transform: scale(1.05);
   opacity: 1;
+  outline: none;
 }
 
-i[title]:hover::after {
+i[title]:hover::after,
+i[title]:focus::after {
   content: attr(title);
   position: absolute;
   top: -40%;
   left: 15%;
   font-size: 1rem;
   opacity: 1;
-
+  outline: none;
 }
 
 @media only screen and (max-width: 1024px) {
