--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,10 +7,12 @@
   align-items: center;
 }
 
-.social-icon-link:hover {
+.social-icon-link:hover,
+.social-icon-link:focus {
   color: #cdecf3;
   transform: scale(1.2) rotateY(360deg);
   transition: 0.7s ease-in-out;
+  outline: none;
 }
 /* Social Icons */
 .social-icon-link {
