--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -133,53 +133,22 @@ input:checked + .slider:before {
 }
 
 .theme-wrapper {
-  position: absolute;
-  left: 4vw;
-  top: 17vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.theme-wrapper h3 {
-  margin-bottom: 1rem;
+.theme-changer {
+  position: absolute;
 }
 
-
-
-/*#text-path {
-  animation: checkmark-stroke 3s forwards;
-  animation-timing-function: ease-in;
-  animation-delay: 1s;
-  stroke-linejoin: round;
-  opacity: 0;
+svg text {
+  fill: white;
+  opacity: 0.7;
+  letter-spacing:  0.2rem;
+  text-transform: uppercase;
 }
-@keyframes checkmark-stroke {
-  0% {
-    stroke-dashoffset: 400;
-    opacity: 1;
-  }
-  100% {
-    stroke-dashoffset: 0;
-    opacity: 1;
-  }
-}*/
-
-/*#text_path {
-  stroke-dasharray: 0 1000;
-  animation: dash 5s linear alternate infinite;
-}
-
-@keyframes dash {
-  from {
-    stroke-dasharray: 0 1000;
-  }
-  to {
-    stroke-dasharray: 1000 0;
-  }
-} */
-
 
 @media screen and (min-width: 1150px) {
   .hero-content {
