--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%) !important;
+  background: var(--primary);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -22,7 +22,7 @@
 }
 
 .navbar-logo {
-  color: var(--primary);
+  color: var(--secondary);
   justify-self: start;
   margin: 8px 20px;
   cursor: pointer;
@@ -30,12 +30,13 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
-  text-shadow: 1px 1px #25434a;
+  text-shadow: 1px 1px var(--primary);
+  transition: all 1s ease-in-out;
 }
 
 .navbar-logo:hover .fa-laptop-code,
 .navbar-logo:focus .fa-laptop-code {
-  color: #cdecf3;
+  color: var(--hover);
   transition: 0.7s ease-in-out;
   transform: scale(1.2) rotateY(360deg);
   text-shadow: none;
@@ -64,24 +65,24 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: var(--secondary);
   display: flex;
   align-items: center;
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
-  text-shadow: 1px 1px #25434a;
+  text-shadow: 1px 1px var(--primary);
 }
 
 .nav-links:hover,
 .nav-links:focus {
-  color: #cdecf3;
+  color: var(--hover);
   transition: all 0.2s ease-in-out;
   transform: scale(1.05);
 }
 
 .fa-bars {
-  color: #fff;
+  color: var(--secondary);
 }
 
 .nav-links-mobile {
@@ -110,7 +111,7 @@
   }
 
   .nav-menu.active {
-    background: #242222;
+    background: var(--primary);;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
@@ -126,8 +127,8 @@
 
   .nav-links:hover,
   .nav-links:focus {
-    background-color: #fff;
-    color: #242424;
+    background-color: var(--primary);
+    color: var(--hover);
     border-radius: 0;
     text-shadow: none;
     outline: none;
@@ -175,8 +176,8 @@
 
   .nav-links-mobile:hover,
    .nav-links-mobile:focus {
-    background: #fff;
-    color: #242424;
+    background: var(--primary);
+    color: var(--secondary);
     transition: 250ms;
     text-shadow: none;
   }
