--- a/src/components/Observer.css
+++ b/src/components/Observer.css
@@ -1,11 +1,4 @@
 .active {
-  border-bottom: 4px solid var(--secondary);
+  border-bottom: 4px solid var(--hover);
   transition: all 0.2s ease-out;
-}
-
-
-.nav-scrolled {
-  background: linear-gradient(90deg, rgb(33, 33, 33) 0%,
-   rgb(45, 45, 45) 100%);
-  opacity: 0.95;
 }
