--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   scroll-padding-top: 60px;
   scroll-behavior: smooth;
+  --background: white;
   --primary: white;
   --secondary: black;
   --hover: lightblue;
