--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: var(--primary);
+  background: var(--background);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -111,7 +111,7 @@
   }
 
   .nav-menu.active {
-    background: var(--primary);;
+    background: var(--background);;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
@@ -127,7 +127,7 @@
 
   .nav-links:hover,
   .nav-links:focus {
-    background-color: var(--primary);
+    background-color: var(--background);
     color: var(--hover);
     border-radius: 0;
     text-shadow: none;
@@ -176,7 +176,7 @@
 
   .nav-links-mobile:hover,
    .nav-links-mobile:focus {
-    background: var(--primary);
+    background: var(--background);
     color: var(--secondary);
     transition: 250ms;
     text-shadow: none;
