adjusted hero section for theme changing

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -26,18 +26,18 @@
 }
 
 .hero-content > h1 {
-  color: #fff;
+  color: var(--secondary);
   font-size: 3.5rem;
-  text-shadow: 2px 2px #15131496;
+  text-shadow: 1px 1px 3px var(--primary);
   letter-spacing: 0.2rem;
 }
 
 .hero-content > p {
-  color: #fff;
-  font-size: 2rem;
+  color: var(--secondary);
+  font-size: 1.7rem;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
-  text-shadow: 2px 2px #15131496;
+  text-shadow: 1px 1px 2px var(--primary);
   letter-spacing: 0.1rem;
 }
 
@@ -46,8 +46,8 @@
 }
 
 .hero-btns a {
-  color: var(--primary);
-  text-shadow: 1px 1px #0a282b;
+  color: var(--secondary);
+  text-shadow: 1px 1px var(--primary);
   cursor: pointer;
   text-decoration: none;
   letter-spacing: 0.1rem;
@@ -83,53 +83,6 @@
   opacity: 0;
   width: 0;
   height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
 
 .theme-wrapper {
