--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,22 +5,20 @@
   outline: none;
   border: none;
   cursor: pointer;
-}
-
-.btn--primary {
-  background-color: var(--primary);
-  color: #242424;
-  border: 1px solid var(--primary);
-  border-radius: 3px;
+  box-shadow: none !important;
 }
 
 .btn--outline {
   background-color: transparent;
-  color: var(--primary);
+  color: var(--secondary);
   padding: 8px 20px;
-  border: 1px solid var(--primary);
+  border: 1px solid var(--background);
   transition: all 0.3s ease-out;
   border-radius: 3px;
+  text-shadow: 1px 1px var(--primary);
+  cursor: pointer;
+  text-decoration: none;
+  letter-spacing: 0.1rem;
 }
 
 .btn--medium {
@@ -30,26 +28,19 @@
   border-radius: 3px;
 }
 
-.btn--large {
-  padding: 12px 26px;
-  font-size: 20px;
-  border-radius: 3px;
-}
 
-.btn--large:hover,
 .btn--medium:hover,
 .btn:hover,
 .btn--outline:hover,
-.btn--primary:hover,
-.btn--large:focus-within,
 .btn--medium:focus-within,
 .btn:focus-within,
-.btn--outline:focus-within,
-.btn--primary:focus-within {
+.btn--outline:focus-within {
   transition: all 0.3s ease-in-out;
-  background: var(--primary);
-  color: black;
-  text-shadow: none;
+  background: var(--background);
+  color: var(--secondary);
   opacity: 0.9;
   outline: none;
+  text-shadow: 1px 1px var(--primary);
+  transform: scale(0.99) translateX(1%) translateY(-1%);
+  box-shadow: 1px 1px var(--hover) !important;
 }
