--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,8 +1,8 @@
 
 #about h1 {
   margin: 40px 30px;
-  color: var(--primary);
-  text-shadow: 2px 2px #15131496;
+  color: var(--secondary);
+  text-shadow: 1px 1px 3px var(--primary);
 }
 
 .about-container {
@@ -24,12 +24,12 @@
   align-items: center;
   align-content: center;
   line-height: 1.5rem;
-  color: #fff;
-  text-shadow: 1px 1px #15131496
+  color: var(--secondary);
+  text-shadow: 1px 1px 3px var(--primary);
 }
 
 .about-info h3 {
-    border-bottom: 3px ridge var(--secondary);
+    border-bottom: 3px ridge var(--background);
     line-height: 2rem;
     margin-block-start: 0 !important;
     margin-block-end: 0 !important;
@@ -38,7 +38,7 @@
 }
 
 .about-info ul:last-child {
-    border-bottom: 2px ridge var(--secondary);
+    border-bottom: 2px ridge var(--background);
 }
 
 .about-info {
@@ -55,7 +55,7 @@
 
 .about-content p {
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 0.8rem;
 }
 
 .about-info ul {
@@ -73,18 +73,19 @@
 }
 
 .skills-icons {
-  background: linear-gradient(181deg, rgb(95 175 183 / 43%), #7b87880f);
+  background: linear-gradient(180deg, rgba(53, 53, 53, 20%), rgba(232, 178, 99, 20%));
+
   border-radius: 35%;
-  padding: 23px;
+  padding: 1.5rem;
 }
 
 .about-skills h1 {
   margin-bottom: 3rem;
-  color: var(--secondary);
   display: flex;
   justify-content: center;
   margin-top: 3rem;
-  text-shadow: 2px 2px #15131496;
+  color: var(--secondary);
+  text-shadow: 1px 1px 3px var(--primary);
 }
 .about-skills .colored {
   font-size: 2.5rem;
