--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -31,15 +31,25 @@
 
 .btn--medium:hover,
 .btn:hover,
-.btn--outline:hover,
+.btn--outline:hover {
+  transition: all 0.3s ease-in-out;
+  background: var(--background);
+  color: var(--secondary);
+  opacity: 0.8;
+  outline: none;
+  text-shadow: 1px 1px var(--primary);
+  transform: scale(0.99) translateX(1%) translateY(-1%);
+  box-shadow: 1px 1px var(--hover) !important;
+}
+
+
 .btn--medium:focus-within,
 .btn:focus-within,
 .btn--outline:focus-within {
   transition: all 0.3s ease-in-out;
-  background: var(--background);
+  background: var(--primary);
   color: var(--secondary);
-  opacity: 0.9;
-  outline: none;
+  opacity: 1;
   text-shadow: 1px 1px var(--primary);
   transform: scale(0.99) translateX(1%) translateY(-1%);
   box-shadow: 1px 1px var(--hover) !important;
