--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
 #about h1 {
   margin: 40px 30px;
   color: var(--secondary);
-  text-shadow: 1px 1px 3px var(--primary);
+  text-shadow: 0.4px 0.4px var(--primary);
 }
 
 .about-container {
@@ -24,8 +24,8 @@
   align-items: center;
   align-content: center;
   line-height: 1.5rem;
-  color: var(--secondary);
-  text-shadow: 1px 1px 3px var(--primary);
+  color: var(--hover);
+  text-shadow: 0.4px 0.4px var(--primary);
 }
 
 .about-info h3 {
@@ -85,7 +85,7 @@
   justify-content: center;
   margin-top: 3rem;
   color: var(--secondary);
-  text-shadow: 1px 1px 3px var(--primary);
+  text-shadow: 0.4px 0.4px var(--primary);
 }
 .about-skills .colored {
   font-size: 2.5rem;
